--- a/app/views/words/game.html.erb
+++ b/app/views/words/game.html.erb
@@ -1,6 +1,6 @@
-<h1>Words#game</h1>
+<h1>Word Game</h1>
 
-
+<p> Can you find the longest word within the grid? </p>
 
 <p> Here is your grid:<p>
 <%= @grid.join(" ") %>
@@ -12,5 +12,5 @@
   <input type="text" id="answer" name="answer" placeholder="answer">
   <input type="hidden" id="grid" name="grid" value = "<%= @grid %>" >
   <input type="hidden" id="start_time" name="start_time" value= "<%= @start_time %>">
-  <input type="submit" value="Go on!">
+  <input type="submit" value="Go!">
 </form>
